# memguard_community

./: .gitignore  CHANGELOG.md  Commands.txt  FINAL_4HOUR_VALIDATION_REPORT.md  INSTALL.md  LICENSE  MANIFEST.in  MARKET_POSITIONING.md  MemGuard_ Project Guide.md  OPEN_SOURCE_FEATURES_COMPLETE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READY_SUMMARY.md  PUBLISHING_GUIDE.md  README.md  REAL_PERFORMANCE_METRICS.md  SOCKET_PROTECTION.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
docs/: PRODUCTION_DEPLOYMENT.md
example_app/: requirements.txt  taskflow_api.py
examples/: demo_leaks.py  memguard_pro_demo.py  website_performance_demo.py
memguard/: __init__.py  adaptive_learning.py  cli.py  config.py  core.py  licensing.py  report.py  sampling.py
memguard/detectors/: __init__.py  caches.py  cycles.py
memguard/guards/: __init__.py  asyncio_guard.py  event_guard.py  file_guard.py  socket_guard.py
memguard_community/: README.md  __init__.py  core_basic.py  core_community.py  guards_basic.py  setup.py
scripts/: README_PROTECTION.md  build_all_protected.bat  performance_dashboard.py  run_hybrid_test.py
tests/: README.md  test_30min_hybrid_monitoring.py  test_4hour_comprehensive_production.py  test_hybrid_monitoring.py
